# eco-stream-api

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum  main.go
.github/workflows/: go.yml  publish.yml  rust.yml
chart/templates/: deployment.yaml  eco-stream.yaml  minio.yaml  postgres.yaml  service.yaml
cmd/server/: main.go
internal/auth/: auth.go
internal/handlers/: handlers.go
internal/jwt/: jwt.go
internal/middleware/: middleware.go
internal/minio/: minio.go
internal/models/: models.go
internal/postgres/: postgres.go
internal/redis/: redis.go
scripts/: init.sql
src/: auth.rs  handlers.rs  main.rs  minio.rs  models.rs  redis.rs
