[package]
name = "eco-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.21.0" }
rust-s3 = "0.33.0"
uuid = { version = "0.8", features = ["v4"] }
